--- a/views/paginaContrato.hbs
+++ b/views/paginaContrato.hbs
@@ -68,52 +68,56 @@
 
 <body class="d-flex flex-column min-vh-100">
 
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-lg" style="background-color: rgb(49, 04, 59);">
         <div class="container-fluid">
-            <img src="/Logoextendido.png" width="150" height="40" alt="Logo">
+            <img src="Images/Logoextendido.png" width="150" height="40" alt="Logo">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <button id="toggleTheme" class="btn btn-light btn-dark-mode">
-                        <i class="bi bi-moon-fill"></i>
-                    </button>
-                    <li class="nav-item">
-                        <a class="nav-link text-light" href="/">Login</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-light" href="#">Gerador de Contratos</a>
-                    </li>
+                    <div class="dropdown">
+                        <button class="btn btn-light">
+                            <i class="bi bi-moon-fill"></i>
+                        </button>
+
+                        <button class="btn btn-light" class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Menu
+                        </button>
+                        <ul class="dropdown-menu">
+                            <li><button class="dropdown-item" type="button" onclick="window.location.href='cadastrarClientes.html'">Cadastrar Clientes</button></li>
+                            <li><button class="dropdown-item" type="button">Sair</button></li>
+                        </ul>
+                    </div>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <div class="flex-grow-1">
+    <div class="flex-grow-1" style="background-color: rgb(192, 185, 216);">
         <div class="container mt-4 content-spacing">
             <div class="row justify-content-center">
                 <div class="col-lg-8 col-md-10">
                     <div class="form-container">
                         <h1 class="text-center title">Gerador de Contratos</h1>
-                        <form action="" method="">
+                        <form>
                             <div class="mb-3 row">
                                 <label for="contratante" class="col-sm-4 col-form-label">Contratante:</label>
                                 <div class="col-sm-8">
-                                    <input type="text" class="form-control" id="contratante">
+                                    <input type="text" class="form-control" id="contratante" readonly>
                                 </div>
                             </div>
                             <div class="mb-3 row">
                                 <label for="cpfCnpj" class="col-sm-4 col-form-label">CPF ou CNPJ:</label>
                                 <div class="col-sm-8">
-                                    <input type="text" class="form-control" id="cpfCnpj">
+                                    <input type="text" class="form-control" id="cpfCnpj" readonly>
                                 </div>
                             </div>
                             <div class="mb-3 row">
                                 <label for="endereco" class="col-sm-4 col-form-label">Endereço:</label>
                                 <div class="col-sm-8">
-                                    <input type="text" class="form-control" id="endereco">
+                                        <input type="text" class="form-control" id="endereco" readonly>
                                 </div>
                             </div>
                             <div class="mb-3 row">
@@ -123,8 +127,7 @@
                                 </div>
                             </div>
                             <div class="mb-3 row">
-                                <label for="horarioMontagem" class="col-sm-4 col-form-label">Horário da
-                                    Montagem:</label>
+                                <label for="horarioMontagem" class="col-sm-4 col-form-label">Horário da Montagem:</label>
                                 <div class="col-sm-8">
                                     <input type="time" class="form-control" id="horarioMontagem">
                                 </div>
@@ -142,11 +145,31 @@
                                 </div>
                             </div>
                             <div class="mb-3 row">
-                                <label for="formaPagamento" class="col-sm-4 col-form-label">Forma de Pagamento
-                                    Escolhida:</label>
+                                <label for="formaPagamento" class="col-sm-4 col-form-label">Forma de Pagamento:</label>
                                 <div class="col-sm-8">
-                                    <input type="text" class="form-control" id="formaPagamento">
+                                    <select class="form-control" id="formaPagamento" onchange="togglePaymentDetails()">
+                                        <option value="">Selecione uma opção</option>
+                                        <option value="pix">Pix</option>
+                                        <option value="pixParcelado">Pix Parcelado</option>
+                                        <option value="cartaoCredito">Cartão de Crédito</option>
+                                    </select>
                                 </div>
+                            </div>
+                            <div class="mb-3 row">
+                                <label for="dataPagamento" class="col-sm-4 col-form-label">Data de Pagamento:</label>
+                                <div class="col-sm-8">
+                                    <input type="date" class="form-control" id="dataPagamento">
+                                </div>
+                            </div>
+                            <div class="mb-3 row payment-details" id="pixParceladoDetails">
+                                <label for="numParcelas" class="col-sm-4 col-form-label">Número de Parcelas:</label>
+                                <div class="col-sm-8">
+                                    <input type="number" class="form-control" id="numParcelas" oninput="updatePaymentDates()">
+                                </div>
+                            </div>
+                            <div class="mb-3 row payment-details" id="datasPagamentos">
+                                <label for="datasPagamento" class="col-sm-4 col-form-label">Datas de Pagamento:</label>
+                                <div class="col-sm-8" id="paymentDatesContainer"></div>
                             </div>
                             <div class="mb-3 row">
                                 <label for="valorTotal" class="col-sm-4 col-form-label">Valor Total:</label>
@@ -164,11 +187,57 @@
         </div>
     </div>
 
-    <footer class="text-light text-center py-3" style="background-color: var(--navbar-background-color);">
+    <footer class="text-light text-center py-3" style="background-color: rgb(49, 04, 59);">
         Todos os direitos reservados
     </footer>
 
     <script>
+        // Função para preencher os campos com os dados do cliente
+        function preencherDadosCliente() {
+            document.getElementById("contratante").value = localStorage.getItem("contratante");
+            document.getElementById("cpfCnpj").value = localStorage.getItem("cpfCnpj");
+            document.getElementById("endereco").value = localStorage.getItem("endereco");
+        }
+
+        // Chama a função ao carregar a página
+        document.addEventListener("DOMContentLoaded", preencherDadosCliente);
+
+        function togglePaymentDetails() {
+            const formaPagamento = document.getElementById("formaPagamento").value;
+            const dataPagamento = document.getElementById("dataPagamento");
+            const pixParceladoDetails = document.getElementById("pixParceladoDetails");
+            const datasPagamentos = document.getElementById("datasPagamentos");
+
+            if (formaPagamento === "pixParcelado") {
+                pixParceladoDetails.style.display = "flex";
+                datasPagamentos.style.display = "block";
+                dataPagamento.style.display = "none";
+            } else {
+                pixParceladoDetails.style.display = "none";
+                datasPagamentos.style.display = "none";
+                dataPagamento.style.display = "block"; // Mostra o campo único de data de pagamento
+                document.getElementById("numParcelas").value = ""; // Limpa o campo ao mudar de opção
+                document.getElementById("paymentDatesContainer").innerHTML = ""; // Limpa as datas de pagamento
+            }
+        }
+
+        function updatePaymentDates() {
+            const numParcelas = document.getElementById("numParcelas").value;
+            const paymentDatesContainer = document.getElementById("paymentDatesContainer");
+
+            // Limpa as datas de pagamento antes de preencher
+            paymentDatesContainer.innerHTML = "";
+
+            // Adiciona campos para as datas de pagamento
+            for (let i = 1; i <= numParcelas; i++) {
+                const input = document.createElement("input");
+                input.type = "date";
+                input.className = "form-control mb-2";
+                input.placeholder = `Data da Parcela ${i}`;
+                paymentDatesContainer.appendChild(input);
+            }
+        }
+
         // Recupera o estado do tema do armazenamento local
         document.addEventListener('DOMContentLoaded', () => {
             const isDarkMode = localStorage.getItem('darkMode') === 'true';
@@ -188,9 +257,12 @@
                 : '<i class="bi bi-moon-fill"></i>';
         });
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-oBqDVmMz4fnFO9gybBogGzGQw2jBXjsDoYwK8zKHu7K7p6/6E6ZU6pEI2P6VzTZr" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+        integrity="sha384-6mxQFYs3j40hT1VWzW6xPciXp8wdt4cLr04MInSgH5CkmPz2MY6Dth/9f6i6wRRS" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
