Criadas novas páginas, preciso arrumar o menu delas

--- a/views/cadastrarCliente.hbs
+++ b/views/cadastrarCliente.hbs
@@ -95,7 +95,7 @@
                             Menu
                         </button>
                         <ul class="dropdown-menu">
-                            <li><button class="dropdown-item" type="button" onclick="window.location.href='gerarContratos.html'">Gerar Contratos</button></li>
+                            <li><button class="dropdown-item" type="button" onclick="window.location.href='cadastrarCliente">Gerar Contratos</button></li>
                             <li><button class="dropdown-item" type="button">Sair</button></li>
                         </ul>
                     </div>
