--- a/views/paginaContrato.hbs
+++ b/views/paginaContrato.hbs
@@ -86,7 +86,7 @@
                             Menu
                         </button>
                         <ul class="dropdown-menu">
-                            <li><button class="dropdown-item" type="button" onclick="window.location.href='cadastrarClientes.html'">Cadastrar Clientes</button></li>
+                            <li><button class="dropdown-item" type="button" onclick="window.location.href='cadastrarCliente'">Cadastrar Clientes</button></li>
                             <li><button class="dropdown-item" type="button">Sair</button></li>
                         </ul>
                     </div>
