--- a/views/index.hbs
+++ b/views/index.hbs
@@ -174,7 +174,7 @@
 
             if (data.success) {
                 // Redireciona para a página de contrato ou onde for necessário
-                window.location.href = "/cadastrarCliente";
+                window.location.href = "/telaInicialOp";
             } else {
                 // Exibe o alerta de erro
                 alert(data.message);
