--- a/views/editarDados.hbs
+++ b/views/editarDados.hbs
@@ -57,7 +57,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg" style="background-color: rgb(49, 04, 59);">
         <div class="container-fluid">
-            <img src="Images/Logoextendido.png" width="150" height="40" alt="Logo">
+            <img src="/Logoextendido.png" width="150" height="40" alt="Logo">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
