--- a/views/cadastrarClienteGerente.hbs
+++ b/views/cadastrarClienteGerente.hbs
@@ -97,9 +97,10 @@
                             Menu
                         </button>
                         <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="cadastro">Cadastrar Usuário</a></li>
                             <li><a class="dropdown-item" href="">Gerar Relatórios</a></li>
-                            <li><a class="dropdown-item" href="cadastrarCliente">Gerar Contratos</a></li>
-                            <li><a class="dropdown-item" href="atualizarOperador">Editar Dados</a></li>
+                            <li><a class="dropdown-item" href="cadastrarClienteGerente">Gerar Contratos</a></li>
+                            <li><a class="dropdown-item" href="editarDados">Editar Dados</a></li>
                             <li><a class="dropdown-item" href="">Cadastrar Produtos</a></li>
                             <li><a class="dropdown-item" href="/">Sair</a></li>
 
@@ -249,10 +250,10 @@
             const data = await response.json();
 
             if (data.success) {
-                window.location.href = "/paginaContrato";
+                window.location.href = "/paginaContratoGerente";
             } else {
                 alert(data.message);
-                window.location.href = "/cadastroClienteForm";
+                window.location.href = "/cadastroClienteFormGerente";
             }
         });
 
