--- a/views/editarDados.hbs
+++ b/views/editarDados.hbs
@@ -104,7 +104,7 @@
                             Menu
                         </button>
                         <ul class="dropdown-menu">
-
+                            <li><a class="dropdown-item" href="cadastro">Cadastrar Usuário</a></li>
                             <li><a class="dropdown-item" href="">Gerar Relatórios</a></li>
                             <li><a class="dropdown-item" href="cadastrarCliente">Gerar Contratos</a></li>
                             <li><a class="dropdown-item" href="editarDados">Editar Dados</a></li>
@@ -131,7 +131,7 @@
                         <h5 class="card-title">Editar Dados do Operador</h5>
                         <p class="card-text text-white text-center">Atualizar informações do operador.</p>
 
-                        <a href="atualizarOperador" class="btn btn-light">Acessar</a>
+                        <a href="atualizarOperadorGerente" class="btn btn-light">Acessar</a>
 
                     </div>
                 </div>
