--- a/views/atualizarOperadorGerente.hbs
+++ b/views/atualizarOperadorGerente.hbs
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Cadastro - Sagrado Neon</title>
+    <title>Atualizar cadastro - Sagrado Neon</title>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
@@ -63,7 +64,6 @@
                     <div class="dropdown">
 
                         <button id="toggleTheme" class="btn btn-light btn-dark-mode">
-
                             <i class="bi bi-moon-fill"></i>
                         </button>
                         <button class="btn btn-light dropdown-toggle" type="button" data-bs-toggle="dropdown"
@@ -71,10 +71,10 @@
                             Menu
                         </button>
                         <ul class="dropdown-menu">
-
+                            <li><a class="dropdown-item" href="cadastro">Cadastrar Usuário</a></li>
                             <li><a class="dropdown-item" href="">Gerar Relatórios</a></li>
-                            <li><a class="dropdown-item" href="cadastrarCliente">Gerar Contratos</a></li>
-                            <li><a class="dropdown-item" href="atualizarOperador">Editar Dados</a></li>
+                            <li><a class="dropdown-item" href="cadastrarClienteGerente">Gerar Contratos</a></li>
+                            <li><a class="dropdown-item" href="editarDados">Editar Dados</a></li>
                             <li><a class="dropdown-item" href="">Cadastrar Produtos</a></li>
                             <li><a class="dropdown-item" href="/">Sair</a></li>
 
@@ -92,49 +92,41 @@
                 <div class="col-12 col-md-8 col-lg-6 d-flex align-items-center" style="min-height: 300px;">
                     <div class="w-100 p-4 text-center"
                         style="background-color: var(--navbar-background-color); border-radius: 10px;">
-                        
                         <img src="/WhatsApp Image 2024-08-22 at 12.39.38.jpeg" width="100" alt="Imagem" class="mb-3">
-                        <form id="registrationForm" style="width: 100%;" action="/auth/registerCliente" method="post">
-                            <p style="font-size: medium; color: var(--text-color);">Cadastrar novo cliente.</p>
+                        <p style="font-size: medium; color: var(--text-color);">Atualizar dados</p>
+                        <form id="registrationForm" style="width: 100%;" action="/auth/atualizarGerente" method="post">
+                            <!-- campo de cpf, servirá para localizar o cliente e alterar -->
+                            <div class="mb-3">
+                                <label for="validationCPF" class="form-label"
+                                    style="color: var(--text-color);">Digite o CPF do Operador</label>
+                                <div class="input-group has-validation">
+                                    <input type="text" class="form-control" id="validationCPF" name="cpf">
+                                </div>
+                            </div>
+
+                            <p style="font-size: medium; color: var(--text-color);">Atualizar dados</p>
+                            
                             <!-- campo de nome -->
                             <div class="mb-3">
                                 <i class="bi bi-emoji-laughing"
                                     style="color: var(--text-color); font-size: 1.5rem;"></i>
-                                <label for="nome" class="form-label"
-                                    style="color: var(--text-color);">Nome</label>
+                                <label for="validationNome" class="form-label"
+                                    style="color: var(--text-color);">Alterar nome</label>
                                 <div class="input-group has-validation">
-                                    <input type="text" class="form-control" id="nome" name="nome">
+                                    <input type="text" class="form-control" id="validationNome" name="nome">
                                 </div>
                             </div>
 
-                            <!-- campo de cpf/cnpj -->
-                            <div class="mb-3">
-                                <i class="bi bi-file-person" style="color: var(--text-color); font-size: 1.5rem;"></i>
-                                <label for="cpfCnpj" class="form-label"
-                                    style="color: var(--text-color);">CPF (ou CNPJ)</label>
-                                <div class="input-group has-validation">
-                                    <input type="text" class="form-control" id="cpfCnpj" name="cpfCnpj">
-                                </div>
-                            </div>
-
-                            <!-- campo de endereço -->
+                            <!-- campo de email -->
                             <div class="mb-3">
                                 <i class="bi bi-envelope-at me-2"
                                     style="color: var(--text-color); font-size: 1.5rem;"></i>
-                                <label for="endereco" class="form-label"
-                                    style="color: var(--text-color);">Endereço</label>
-                                <input type="text" class="form-control" id="endereco" name="endereco">
+                                <label for="exampleInputEmail1" class="form-label"
+                                    style="color: var(--text-color);">Alterar e-mail</label>
+                                <input type="email" class="form-control" id="exampleInputEmail1" name="email">
                             </div>
 
-                            <!-- campo de contato -->
-                            <div class="mb-3">
-                                <i class="bi bi-lock me-2" style="color: var(--text-color); font-size: 1.5rem;"></i>
-                                <label for="contato" class="form-label"
-                                    style="color: var(--text-color);">Contato</label>
-                                <input type="text" class="form-control" id="contato" name="contato">
-                            </div>
-
-                            <button type="submit" class="btn btn-primary">Cadastrar</button>
+                            <button type="submit" class="btn btn-primary">Atualizar dados</button>
                             <br><br>
                         </form>
                     </div>
@@ -167,10 +159,9 @@
         document.getElementById('registrationForm').addEventListener('submit', function (event) {
             let isValid = true;
             const fields = [
-                'nome',
-                'cpfCnpj',
-                'endereco',
-                'contato'
+                'validationNome',
+                'validationCPF',
+                'exampleInputEmail1',
             ];
             let emptyFields = false;
 
