--- a/views/telaInicialGerente.hbs
+++ b/views/telaInicialGerente.hbs
@@ -104,9 +104,9 @@
                             Menu
                         </button>
                         <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="cadastro">Cadastrar Usuário</a></li>
                             <li><a class="dropdown-item" href="">Gerar Relatórios</a></li>
-
-                            <li><a class="dropdown-item" href="cadastrarCliente">Gerar Contratos</a></li>
+                            <li><a class="dropdown-item" href="cadastrarClienteGerente">Gerar Contratos</a></li>
                             <li><a class="dropdown-item" href="editarDados">Editar Dados</a></li>
                             <li><a class="dropdown-item" href="">Cadastrar Produtos</a></li>
                             <li><a class="dropdown-item" href="/">Sair</a></li>
@@ -148,7 +148,7 @@
                         <i class="bi bi-file-earmark-text-fill card-icon"></i>
                         <h5 class="card-title">Gerar Contrato</h5>
                         <p class="card-text text-white text-center">Criar contratos para eventos.</p>
-                        <a href="cadastrarCliente" class="btn btn-light">Acessar</a>
+                        <a href="cadastrarClienteGerente" class="btn btn-light">Acessar</a>
                     </div>
                 </div>
                 <!-- Card 4: Editar Dados -->
