Ajustar redirecionamento na tela de atualização de operador na conta de gerente

--- a/views/atualizarOperadorGerente.hbs
+++ b/views/atualizarOperadorGerente.hbs
@@ -94,7 +94,7 @@
                         style="background-color: var(--navbar-background-color); border-radius: 10px;">
                         <img src="/WhatsApp Image 2024-08-22 at 12.39.38.jpeg" width="100" alt="Imagem" class="mb-3">
                         <p style="font-size: medium; color: var(--text-color);">Atualizar dados</p>
-                        <form id="registrationForm" style="width: 100%;" action="/auth/atualizarGerente" method="post">
+                        <form id="registrationForm" style="width: 100%;" action="/auth/atualizarOperadorGerente" method="post">
                             <!-- campo de cpf, servirá para localizar o cliente e alterar -->
                             <div class="mb-3">
                                 <label for="validationCPF" class="form-label"
