--- a/views/cadastrarClienteGerente.hbs
+++ b/views/cadastrarClienteGerente.hbs
@@ -96,11 +96,12 @@
                             Menu
                         </button>
                         <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="cadastro">Cadastrar Usuário</a></li>
                             <li><a class="dropdown-item" href="">Gerar Relatórios</a></li>
-                            <li><a class="dropdown-item" href="cadastrarCliente">Gerar Contratos</a></li>
-                            <li><a class="dropdown-item" href="atualizarOperador">Editar Dados</a></li>
+                            <li><a class="dropdown-item" href="cadastrarClienteGerente">Gerar Contratos</a></li>
+                            <li><a class="dropdown-item" href="editarDados">Editar Dados</a></li>
                             <li><a class="dropdown-item" href="">Cadastrar Produtos</a></li>
-                            <li><a class="dropdown-item" href="sair">Sair</a></li>
+                            <li><a class="dropdown-item" href="/">Sair</a></li>
 
                         </ul>
                     </div>
@@ -274,7 +275,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-                    <a id="confirmRegister" class="btn btn-primary" href="/cadastroClienteForm">Cadastrar novo
+                    <a id="confirmRegister" class="btn btn-primary" href="/cadastroClienteFormGerente">Cadastrar novo
                         cliente</a>
                 </div>
             </div>
